# codeforces

./: 1783A  A. Cipher Shifer.cpp  A. Madoka and Math Dad.cpp  A. Musical Puzzle.cpp  Apartments.cpp  Apple-Division.cpp  B. Almost Ternary Matrix.cpp  B. Binary Cafe.cpp  B. Restore the Weather.cpp  Bit-Strings.cpp  C. Ski Resort.cpp  C. Vlad Building Beautiful Array.cpp  CMakeLists.txt  Coin-Piles.cpp  Creating-Strings.cpp  D. Wooden Toy Festival.cpp  Distinct-Numbers.cpp  Ferris-Wheel.cpp  Increasing-Array.cpp  Missing-Number.cpp  Number-Spiral.cpp  Palindrome-Reorder.cpp  Permutations.cpp  Repetitions.cpp  Trailing-Zeros.cpp  Two-Knights.cpp  Two-Sets.cpp  Weird-Algorithm.cpp
