cmake_minimum_required(VERSION 3.25)
project(Competitive_Programming)

set(CMAKE_CXX_STANDARD 17)

add_executable(Competitive_Programming Weird-Algorithm.cpp Missing-Number.cpp Repetitions.cpp Increasing-Array.cpp Permutations.cpp Number-Spiral.cpp Two-Knights.cpp Two-Sets.cpp Bit-Strings.cpp Trailing-Zeros.cpp Coin-Piles.cpp Palindrome-Reorder.cpp Creating-Strings.cpp Apple-Division.cpp Distinct-Numbers.cpp Apartments.cpp Ferris-Wheel.cpp "A. Musical Puzzle.cpp" "B. Almost Ternary Matrix.cpp" "A. Madoka and Math Dad.cpp" "B. Restore the Weather.cpp" "C. Vlad Building Beautiful Array.cpp" "A. Cipher Shifer.cpp" "B. Binary Cafe.cpp" "C. Ski Resort.cpp" "D. Wooden Toy Festival.cpp")
